doc: correct typos in various docs
PR-URL: https://github.com/nodejs/node/pull/26312
Reviewed-By: Rich Trott <rtrott@gmail.com>
Reviewed-By: Colin Ihrig <cjihrig@gmail.com>
Reviewed-By: James M Snell <jasnell@gmail.com>
Reviewed-By: Beth Griggs <Bethany.Griggs@uk.ibm.com>
Reviewed-By: Luigi Pinca <luigipinca@gmail.com>

--- a/doc/api/v8.md
+++ b/doc/api/v8.md
@@ -224,7 +224,7 @@ if a previous write has failed.
 * `id` {integer} A 32-bit unsigned integer.
 * `arrayBuffer` {ArrayBuffer} An `ArrayBuffer` instance.
 
-Marks an `ArrayBuffer` as havings its contents transferred out of band.
+Marks an `ArrayBuffer` as having its contents transferred out of band.
 Pass the corresponding `ArrayBuffer` in the deserializing context to
 [`deserializer.transferArrayBuffer()`][].
 
@@ -328,7 +328,7 @@ Deserializes a JavaScript value from the buffer and returns it.
 * `id` {integer} A 32-bit unsigned integer.
 * `arrayBuffer` {ArrayBuffer|SharedArrayBuffer} An `ArrayBuffer` instance.
 
-Marks an `ArrayBuffer` as havings its contents transferred out of band.
+Marks an `ArrayBuffer` as having its contents transferred out of band.
 Pass the corresponding `ArrayBuffer` in the serializing context to
 [`serializer.transferArrayBuffer()`][] (or return the `id` from
 [`serializer._getSharedArrayBufferId()`][] in the case of `SharedArrayBuffer`s).
